--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <script src="https://www.paypal.com/sdk/js?client-id=ASU9mRyiWTZYUgkThRoZmBojvz9MgpENlSFm9b5b6ODG6rJSdJaoL8duA2-DVFf8BXLOCYJDrslIzi94&currency=JPY"></script>
+    <script src="https://www.paypal.com/sdk/js?client-id=ASU9mRyiWTZYUgkThRoZmBojvz9MgpENlSFm9b5b6ODG6rJSdJaoL8duA2-DVFf8BXLOCYJDrslIzi94"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
